<resources>
    <string name="app_name">SmartStorageMobile</string>
    <string name="title_activity_menu"> </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="to_find">To find</string>
    <string name="product_id_45">Product id: 45</string>
    <string name="temperature_range_25_c">Temperature range: 25 C</string>
    <string name="_25_c">25 C</string>
    <string name="temperature_range_now">Temperature range now:</string>
    <string name="humidity_range_now">Humidity range now:</string>
    <string name="_50">50%</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_to_your_account">Sign in to your account!</string>
    <string name="my_ordering">My ordering</string>
    <string name="size">Size</string>
    <string name="weight">Weight</string>
    <string name="type_of_product">Type Of Product</string>
    <string name="quantity">Quantity</string>
    <string name="storage_life">Storage Life</string>
    <string name="temperature_range">Temperature range</string>
    <string name="humidity_range">Humidity range</string>
    <string name="pay">Pay</string>
    <string name="update">Update</string>
    <string name="first_name">First Name</string>
    <string name="lust_name">Surname</string>
    <string name="age">Age</string>
    <string name="product_id_20">Product Id: 20</string>
    <string name="customer_id_64">Customer id: 64</string>
    <string name="humidity_now_50">Humidity now: 50%</string>
    <string name="humidity_range_50">Humidity range: 50%</string>
    <string name="temperature_now_20_c">Temperature now: 20 C</string>
    <string name="temperature_range_20_c">Temperature range: 20 C</string>
    <string name="quantity_100">Quantity: 100</string>
    <string name="size_xl">Size: XL</string>
    <string name="storage_address_ax0001">Storage address: AX0001</string>
    <string name="storage_life_23_05_2021">Storage life: 23–05–2021</string>
    <string name="type_of_product_metal">Type of product: Metal</string>
    <string name="weight_20kg">Weight: 20kg</string>
    <string name="sum_10_000">Sum: 10 000$</string>
    <string name="total_amount_100_000">Total amount: 100 000 $</string>
    <string name="item_size_xl">Item size: XL</string>
    <string name="total_count_100">Total count: 100</string>
    <string name="welcome">Welcome</string>
    <string name="smart_storage">Smart Storage</string>
    <string name="www_nure_ua">www.nure.ua</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="order">Order</string>
    <string name="statistics">Statistics</string>
    <string name="control">Control</string>
    <string name="my_orders">My orders</string>
    <string name="about_us">About Us</string>
    <string name="faq">FAQ</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="enter_your_login_information">Enter your login information</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_login">"Enter your login"</string>
    <string name="please_enter_a_password_that_is_more_than_5_characters">Please enter a password that is more than 5 characters</string>
    <string name="registration_form">Registration form</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="enter_mail">Enter mail</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_a_password_that_is_more_than_5_characters">Enter a password that is more than 5 characters</string>
    <string name="share">Share</string>
    <string name="total_amount">Total amount: </string>
    <string name="item_size">Item size: </string>
    <string name="total_count">Total count: </string>
    <string name="product_id">Product Id: </string>
    <string name="type_of_product_">Type of product: </string>
    <string name="temperature_range_">Temperature range:</string>
    <string name="humidity_range_">Humidity range:</string>
    <string name="customer_id">Customer id:</string>
    <string name="quantity_">Quantity: </string>
    <string name="size_">Size:</string>
    <string name="storage_address">Storage address:</string>
    <string name="storage_life_">Storage life:</string>
    <string name="sum">Sum:</string>
    <string name="weight_">Weight:</string>

    <string name="statistics1">Statistics for the advertiser</string>
    <string name="statistics2">Statistics popularity of store sizes</string>

</resources>