<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/order"
            android:title="@string/order" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/statistics"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_control"
            android:icon="@drawable/control"
            android:title="@string/control" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/order"
            android:title="@string/my_orders" />
    </group>

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_account"
                    android:title="@string/profile" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_exit"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/about_us" />

            <item
                android:id="@+id/faq"
                android:icon="@drawable/ic_baseline_chat_24"
                android:title="@string/faq" />
        </menu>
    </item>
</menu>