<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:id="@+id/cardOrdering"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@drawable/gradient">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/productIdOrdering"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_id_20"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:padding="5dp">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/customerIdOrdering"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_id_64"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:padding="5dp">
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/humidityNowOrdering"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_now_50"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:padding="5dp">
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/humidityRangeOrdering"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_range_50"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:padding="5dp">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/temperatureNowOrdering"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_now_20_c"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:padding="5dp">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/temperatureRangeOrdering"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_range_20_c"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:padding="5dp">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/quantityOrdering"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity_100"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:padding="5dp">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/sizeOrdering"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/size_xl"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:padding="5dp">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/storageAddressOrdering"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/storage_address_ax0001"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:padding="5dp">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/storageLifeOrdering"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/storage_life_23_05_2021"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:padding="5dp">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/typeOfProductOrdering"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type_of_product_metal"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:padding="5dp">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/weightOrdering"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_20kg"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:padding="5dp">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/sumOrdering"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sum_10_000"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:padding="5dp">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>