<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".IndicatorActivity"
android:padding="10dp"
android:background="@drawable/gradient">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/searchLinearLayout"
    android:orientation="horizontal">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_search"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text=""
        android:drawableLeft="@drawable/ic_baseline_search_24"
        android:drawablePadding="10dp">
    </com.google.android.material.textfield.TextInputEditText>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/profile"
        android:text="@string/to_find"
        android:layout_marginLeft="20dp">
    </Button>

</LinearLayout>

    <RelativeLayout
        android:id="@+id/cardID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@+id/searchLinearLayout"
        android:layout_marginTop="20dp"
        android:visibility="invisible">

        <LinearLayout
            android:id="@+id/linearId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_above="@+id/textView3"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/productId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_id_45"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:gravity="center"
                android:padding="5dp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearTemperatureRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_below="@+id/linearId"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/temperatureRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature_range_25_c"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:padding="5dp">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_below="@+id/linearTemperatureRange"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_range_now"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:padding="5dp">
            </TextView>

            <EditText
                android:id="@+id/temperatureNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_25_c"
                android:textColor="@color/black"
                android:textSize="17sp">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearHumidityRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_below="@+id/linearTemperature"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/humidityRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/humidity_range_50"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:padding="5dp">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_below="@+id/linearHumidityRange"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity_range_now"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:padding="5dp">
            </TextView>

            <EditText
                android:id="@+id/humidityNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_50"
                android:textColor="@color/black"
                android:textSize="17sp">
            </EditText>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/cardID"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:id="@+id/updateButton">
        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profile"
            android:text="@string/update"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">
        </Button>
    </LinearLayout>

</RelativeLayout>